# bayestest-c

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: bayestest.h
test/: main.c
